--- a/Changes
+++ b/Changes
@@ -1,8 +1,15 @@
 # Revision history for Perl extension Attribute::Util.
 #
-# $Id: Changes,v 1.3 2008/05/19 06:02:40 dankogai Exp dankogai $
+# $Id: Changes,v 1.4 2009/03/24 13:28:55 dankogai Exp dankogai $
 #
-$Revision: 1.3 $ $Date: 2008/05/19 06:02:40 $
+$Revision: 1.4 $ $Date: 2009/03/24 13:28:55 $
+! lib/Attribute/Method.pm
+  POD fixes
+  Message-Id:	<20090324131233.GQ21585@home.power>
+  CAVEAT on require vs use
+  http://rt.cpan.org/Public/Bug/Display.html?id=41638
+
+1.03 2008/05/19 06:02:40
 ! lib/Attribute/Util.pm
 + lib/Attribute/Method.pm
 + t/05method.t
