--- a/Changes
+++ b/Changes
@@ -1,8 +1,14 @@
 # Revision history for Perl extension Attribute::Util.
 #
-# $Id: Changes,v 1.4 2009/03/24 13:28:55 dankogai Exp dankogai $
+# $Id: Changes,v 1.5 2009/05/27 11:36:04 dankogai Exp dankogai $
 #
-$Revision: 1.4 $ $Date: 2009/03/24 13:28:55 $
+$Revision: 1.5 $ $Date: 2009/05/27 11:36:04 $
+! lib/Attribute/Method.pm
+  Addressed: #46403: Attribute::Method
+  - not preserving line number information and sub names
+  http://rt.cpan.org/Public/Bug/Display.html?id=46403
+
+1.04 2009/03/24 13:28:55
 ! lib/Attribute/Method.pm
   POD fixes
   Message-Id:	<20090324131233.GQ21585@home.power>
